<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    tools:context=".Activity_Edit">
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gline_doc"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.35"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/tv_TT"
        android:text="@string/capnhat_thongtin"
        android:textAllCaps="true"
        android:textSize="22sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:textColor="@color/design_default_color_primary"
        android:layout_width="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/tv_hoten"
        android:text="@string/ho_ten"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/tv_TT"
        android:layout_marginTop="50dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/edtHoten"
        android:hint="@string/ho_ten_example"
        android:textSize="20sp"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@id/tv_TT"
        app:layout_constraintLeft_toRightOf="@id/gline_doc"
        android:layout_width="250dp"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/tv_gioitinh"
        android:text="@string/gender"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/edtHoten"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <RadioGroup
        android:id="@+id/rg_gioitinh"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/edtHoten"
        app:layout_constraintLeft_toRightOf="@id/gline_doc">
        <RadioButton
            android:id="@+id/rbNam"
            android:text="@string/male"
            android:layout_marginStart="50dp"
            app:layout_constraintTop_toBottomOf="@id/edtHoten"
            app:layout_constraintLeft_toRightOf="@id/gline_doc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <RadioButton
            android:id="@+id/rbNu"
            android:text="@string/female"
            android:layout_marginStart="60dp"
            app:layout_constraintLeft_toRightOf="@id/rbNam"
            app:layout_constraintTop_toBottomOf="@id/edtHoten"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RadioGroup>
    <TextView
        android:id="@+id/tv_email"
        android:text="@string/email"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/tv_gioitinh"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/edtEmail"
        android:hint="@string/email_example"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/tv_gioitinh"
        app:layout_constraintLeft_toRightOf="@id/gline_doc"
        android:layout_width="250dp"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/tv_sdt"
        android:text="@string/sdt"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/edtEmail"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/edtSDT"
        android:hint="@string/sdt_example"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/edtEmail"
        app:layout_constraintLeft_toRightOf="@id/gline_doc"
        android:layout_width="250dp"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/btnSave"
        android:text="@string/sua"
        app:layout_constraintTop_toBottomOf="@id/edtSDT"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/btnExit"
        android:text="@string/thoat"
        app:layout_constraintTop_toBottomOf="@id/edtSDT"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toRightOf="@id/btnSave"
        android:layout_marginStart="80dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


</androidx.constraintlayout.widget.ConstraintLayout>