<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_margin="5dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:text="@string/dssv"
        android:textAllCaps="true"
        android:gravity="center_horizontal"
        android:textStyle="bold"
        android:textSize="25sp"
        android:textColor="@color/design_default_color_primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/Search"
            android:hint="@string/search_example"
            android:layout_width="250dp"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/btnSearch"
            android:text="@string/search"
            android:layout_marginStart="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <ListView
        android:id="@+id/lvsv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>